static/css/styles.css
/* ... */
/****************** LANDING PAGE MAIN PICTURE ************/

/* z index of the main picture on index.html */
#firstpic {
    z-index: -1;

}

/***************************** TREATMENTS ****************/

/*container for outer filp card */
.flip-card {
    position: relative;
    -webkit-perspective: 1000;
    perspective: 1000;
}

/* container for inner flip card */
.flip {
    position: relative;
    -webkit-transition: all 1s ease;
    transition: all 1s ease;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
}

/* card rotate when mouse moves into the card*/
.flip.mousein {
    transform: rotateY( 180deg);
    -webkit-transform: rotateY(180deg);
}

/*the front and back containers */
.flip div {
    position: absolute;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

/*the front container z index */
.front {
    z-index: 2;
}

/*the back container rotated 180 degrees */
.back {
    -webkit-transform: rotateY(180deg);
    transform: rotateY( 180deg);
}

/*  inner flip card container dimensions */
.treatment-flip-card-dimensions {
    min-width: 100%;
    height: 320px;
}

/* front and back flip card dimensions */
.treatment-flip-card-dimensions div {
    min-width: 100%;
    height: 320px;

}

/* front flip card */
.treatment-front {
    padding: 30px;
}

/* black flip card */
.treatment-back {
    background-color: #A326CE;
    color: white;
    padding: 20px;
    font-size: 16px;
}

/* treatments H1 and links decoration */
.treatment-front H1, .treatment-back H1, .treatment-back a, .landing-page-div a {
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: #EB3EF4;
}

/* front and back H1 font size */
.treatment-front H1, .treatment-back H1 {
    font-size: 25px;
}

/* front and back treatment card links */
.treatment-back a, .landing-page-div a {
    font-family: 'Gloria Hallelujah', cursive;
    color: #EB3EF4;
    float: right;
    background-color: black;
    border-radius: 50px 0;
    padding: 20px;
}

/* treatment back card link*/
.treatment-back a {
    position: absolute;
    bottom: 0px;
    right: 0;
}

/* treatment back paragraph */
.treatment-back p {
    font-family: 'Gloria Hallelujah', cursive;
    text-align: center;
    font-size: 20px;
}

/* treatment back card H3 */
.treatment-back h3 {
    text-align: center;
    padding: 7px;
}

/* treatment card links on mobile view */
#mobile-treatments a {
    float: none;
}

/****************LANDING PAGE SHOP**************************/

/* shop container */
#landing-page-shop-div {
    background-color: white;
    color: #A326CE;
}

/* shop container H1 */
#landing-page-shop-div h1 {
    color: #629B68;
}

/* prodcut description paragraph */
#landing-product-description p {
    font-family: 'Didact Gothic', sans-serif;
    text-align: center;
    line-height: 200%;
}

/**************** LANDING PAGE NEWS & SPECIALS ****************/

/* news container */
#landing-page-news-div {
    background-color: #A326CE;
}

/* post container */
.single-post {
    border-bottom-width: 5px;
    border-bottom-style: solid;
    border-bottom-color: white;
    height: 600px;
    background-color: #A326CE;
}

/* post thumbnail */
.single-post .thumbnail {
    background-color: #A326CE;
    border: none;
}

/* ppst image */
#post-img {
    max-width: 500px;
    height: 250px;
    background-size: cover;
    background-repeat: no-repeat;
}

/* thumbnail read more link */
.thumbnail>a {
    position: absolute;
    bottom: 20px;
    right: 20px;
    background-color: white;
    font-weight: bolder;
    color: #A326CE;
}

/* thumbnail caption */
.thumbnail .caption {
    color: white;
}

/* caption */
.caption {
    max-height: 180px;
    overflow: hidden;
}

/* carousel indicators */
.carousel-indicators {
    bottom: 0;
    font-size: 2em;
}

/* news container H3 links */
#landing-page-news-div h3 a {
    background-color: white;
    color: #A326CE;
}

/*************** LANDING PAGE CONTACT  ***************************/

/* contact gina container*/
#contact-gina {
    background-color: black;
}

/* google map */
#map {
    min-height: 70vh;
    width: 100vw;
    border: 2px solid #A326CE;
    margin: 100px 0 0 20px;
}

/* the horizontal rule in the contact section*/
#contact hr {
    width: 50%;
    text-align: center;
    padding: 20px 0;
}

/* contact link */
#contact a {
    float: none;
    padding: 0;
    border-radius: 0;
    font-family: 'Didact Gothic', sans-serif;
    text-decoration: none;

}

/* fontawesome facebook glyphicon */
.fa-facebook-f {
    background: #3B5998;
    color: #FFFFFF;
    padding: 0.1em 0.3em;
    border-radius: 50%;
    margin: 0.15em;
    font-size: 2.5em;
}

/* landing page contact button*/
#contact-btn{
    background-color: #A326CE;
    border-radius:10px;
    color:white;
    font-weight: bold;
    text-decoration: none;
    padding:10px;
}
/************** LANDING PAGE GENERAL ****************************/

/* Landing page containers */
.landing-page-div {
    min-height: 100vh;
    min-width: 100vw;
}

/* landing page containers H3 links */
.landing-page-div h3 a {
    background-color: #A326CE;
    color: white;
    text-decoration: none;
    margin: 20px;
    text-align: center;
}

/************************ TREATMENTS ******************************************/

/* treatment tables H2 */
td>h2, #wax h2 {
    color: #A326CE;
    padding: 20px 0;
}

/* 1st columns */
tr>td,
#wax {
    padding-left: 20px;
}

/* table cation */
table caption {
    color: #A326CE;
    text-align: center;
    font-size: 32px;
    font-family: 'Gloria Hallelujah', cursive;
}

/* contact gina container on large devices */
#contact-gina-lg {
    font-weight: bold;
    font-size: 24px;
    background-color: #A326CE;
    margin-top: 50px;
    margin-bottom: 50px;
}

/* contact gina link on large devices */
#contact-gina-lg a {
    color: white;
}
/* ... */

